--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               <div class="bottom-container">
                 <a class="footer-link" href="https://www.linkedin.com/in/stavros-thalassinos/">LinkedIn</a>
                 <a class="footer-link" href="https://twitter.com/Stavthal/">Twitter</a>
-                <a class="footer-link" href="#">Website</a>
+                <a class="footer-link" href="https://stavthal.github.io/CV/">Website</a>
                 <p>© Stavros Thalassinos.</p>
                 <p><a class="reference"href="https://www.flaticon.com/free-icons/dj-music" title="dj music icons">Icons created by Freepik - Flaticon</a></p>
               </div>
