--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     </head>
     <body>
         <div class="top-container">
+          <div class="top-bar">
+            <a href="https://stavthal.github.io/CV/" style="padding-right: 10px;">About</a>
+            <a href="https://github.com/stavthal?tab=repositories" style="padding-right: 50px;">Work</a>
+          </div>
             <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
             <h1>I'm Stavros.</h1>
             <h2>a programmer</h2>
@@ -69,7 +73,7 @@
               <div class="bottom-container">
                 <a class="footer-link" href="https://www.linkedin.com/in/stavros-thalassinos/">LinkedIn</a>
                 <a class="footer-link" href="https://twitter.com/Stavthal/">Twitter</a>
-                <a class="footer-link" href="https://stavthal.github.io/CV/">Website</a>
+                <a class="footer-link" href="#">Website</a>
                 <p>© Stavros Thalassinos.</p>
                 <p><a class="reference"href="https://www.flaticon.com/free-icons/dj-music" title="dj music icons">Icons created by Freepik - Flaticon</a></p>
               </div>
