--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <h1>I'm Stavros.</h1>
             <h2>a programmer</h2>
             <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-            <img src="images/mountain.png" alt="mountain-img">
+            <img src="images/mountain.png" alt="mountain-img" style="padding-top: 17.0rem;">
             </div>
            
 
